fix(select): text align start.

--- a/styles/Select.scss
+++ b/styles/Select.scss
@@ -8,6 +8,7 @@
   width: 100%;
   color: $select-text-color;
   font-family: $default-font-family;
+  text-align: start;
   cursor: pointer;
   .n-select-link {
     position: relative;
